Removed hardcoded credentials, examples sanity check, testing with local SGX enclave

--- a/examples/training-demo-all-in-one.ipynb
+++ b/examples/training-demo-all-in-one.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,14 +32,14 @@
     "from avato_training import Training_Instance, Configuration\n",
     "import numpy as np\n",
     "\n",
-    "analyst_username = \"***REMOVED***\"\n",
-    "analyst_***REMOVED*** = \"***REMOVED***\"\n",
+    "analyst_username = os.getenv('ANALYST_ID')\n",
+    "analyst_***REMOVED*** = os.getenv('ANALYST_PASSWORD')\n",
     "\n",
-    "dataowner1_username = \"***REMOVED***\"\n",
-    "dataowner1_***REMOVED*** = \"***REMOVED***\"\n",
+    "dataowner1_username = os.getenv('DATAOWNER1_ID')\n",
+    "dataowner1_***REMOVED*** = os.getenv('DATAOWNER1_PASSWORD')\n",
     "\n",
-    "dataowner2_username = \"***REMOVED***\"\n",
-    "dataowner2_***REMOVED*** = \"***REMOVED***\"\n",
+    "dataowner2_username = os.getenv('DATAOWNER2_ID')\n",
+    "dataowner2_***REMOVED*** = os.getenv('DATAOWNER2_PASSWORD')\n",
     "\n",
     "# This is the hash of the code\n",
     "expected_measurement = \"4ff505f350698c78e8b3b49b8e479146ce3896a06cd9e5109dfec8f393f14025\"\n",
@@ -66,14 +66,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 96,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Instance ID: ca1b475c-c678-4799-99e7-204742d95c17\n"
+      "Instance ID: 6cc8d512-0288-4fb8-a1d0-34e506f99ed6\n"
      ]
     }
    ],
@@ -116,8 +118,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 97,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "analyst_instance.validate_fatquote(\n",
@@ -139,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 103,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -423,9 +427,9 @@
      "output_type": "stream",
      "text": [
       "metadata: {\n",
-      "  \"CV Test Accuracy\": \"0.4848671\",\n",
-      "  \"CV Train Accuracy\": \"0.49172148\",\n",
-      "  \"Fullset Accuracy\": \"0.48877093\"\n",
+      "  \"CV Test Accuracy\": \"0.4860941\",\n",
+      "  \"CV Train Accuracy\": \"0.48822862\",\n",
+      "  \"Fullset Accuracy\": \"0.48591262\"\n",
       "}\n"
      ]
     }
@@ -454,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -462,9 +466,9 @@
      "output_type": "stream",
      "text": [
       "metadata: {\n",
-      "  \"CV Test Accuracy\": \"0.4860941\",\n",
-      "  \"CV Train Accuracy\": \"0.4869585\",\n",
-      "  \"Fullset Accuracy\": \"0.5097999\"\n",
+      "  \"CV Test Accuracy\": \"0.47443762\",\n",
+      "  \"CV Train Accuracy\": \"0.47695622\",\n",
+      "  \"Fullset Accuracy\": \"0.48040017\"\n",
       "}\n"
      ]
     }
@@ -493,16 +497,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Some predictions of the classifier: ['5' '5']\n",
-      "Accuracy of the enclave classifier on the full dataset (as returned through the metadata object): 0.5097999\n",
-      "Accuracy of the local classifier on the full dataset: 0.5097999183340138\n"
+      "Some predictions of the classifier: ['6' '5']\n",
+      "Accuracy of the enclave classifier on the full dataset (as returned through the metadata object): 0.5151082\n",
+      "Accuracy of the local classifier on the full dataset: 0.5151082074316048\n"
      ]
     }
    ],
@@ -550,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 49,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -562,6 +566,34 @@
     "analyst_instance.delete()\n",
     "assert analyst_instance.id not in analyst_client.get_instances()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -592,7 +624,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5rc1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
