--- a/examples/training-demo-analyst-simple.ipynb
+++ b/examples/training-demo-analyst-simple.ipynb
@@ -24,13 +24,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import json\n",
     "import example\n",
     "\n",
-    "analyst_username, analyst_***REMOVED*** = example.analyst_credentials\n",
+    "analyst_username = os.getenv('ANALYST_ID')\n",
+    "analyst_***REMOVED*** = os.getenv('ANALYST_PASSWORD')\n",
     "\n",
     "# The analyst needs these to control who can upload data\n",
-    "data_owner_usernames = (example.dataowner1_credentials[0], example.dataowner2_credentials[0])\n",
+    "data_owner_usernames = (os.getenv('DATAOWNER1_ID'), os.getenv('DATAOWNER2_ID'))\n",
     "\n",
     "# How the analyst expects the data to be formatted\n",
     "feature_columns = [\n",
@@ -65,7 +67,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created Instance with ID: 88880528-dc99-446e-b118-fb2975a6666d\n",
+      "Created Instance with ID: 3fa57b0e-2914-4312-bacd-f8748be7e0b1\n",
       "\n",
       "Configured instance with feature columns \n",
       "  'fixed acidity'\n",
@@ -282,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5rc1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
