--- a/examples/training-demo-data-owner-1-simple.ipynb
+++ b/examples/training-demo-data-owner-1-simple.ipynb
@@ -18,14 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import example\n",
     "\n",
-    "dataowner1_username, dataowner1_***REMOVED*** = example.dataowner1_credentials\n",
-    "dataowner1_file = example.data_filenames[0]"
+    "dataowner1_username = os.getenv('DATAOWNER1_ID')\n",
+    "dataowner1_***REMOVED*** = os.getenv('DATAOWNER1_PASSWORD')\n",
+    "dataowner1_file = \"test-data/wine-dataowner1.csv\""
    ]
   },
   {
@@ -37,11 +38,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "instance_id_from_analyst = \"88880528-dc99-446e-b118-fb2975a6666d\""
+    "instance_id_from_analyst = \"e74d2ed9-a719-45f3-a237-20951eb54c85\""
    ]
   },
   {
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5rc1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
