--- a/examples/training-demo-data-owner-1.ipynb
+++ b/examples/training-demo-data-owner-1.ipynb
@@ -18,20 +18,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import pandas as pd\n",
     "from avato import Client\n",
     "from avato import Secret\n",
     "from avato_training import Training_Instance\n",
     "import example\n",
     "\n",
-    "dataowner1_username, dataowner1_***REMOVED*** = example.dataowner1_credentials\n",
+    "dataowner1_username = os.getenv('DATAOWNER1_ID')\n",
+    "dataowner1_***REMOVED*** = os.getenv('DATAOWNER1_PASSWORD')\n",
     "\n",
     "# This is the hash of the code\n",
-    "expected_measurement = \"4ff505f350698c78e8b3b49b8e479146ce3896a06cd9e5109dfec8f393f14025\"\n",
+    "expected_measurement = \"3157f2b53e07c9501df20cfef69fbe0c24865095170cd4492a3587d5db247227\"\n",
     "\n",
     "# The datafiles uploaded by the \n",
     "dataowner1_file, _ = example.data_filenames\n",
@@ -49,11 +51,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "instance_id_from_analyst = \"651a23f6-0233-41f3-b13a-fb216b1f11b8\""
+    "instance_id_from_analyst = \"3fa57b0e-2914-4312-bacd-f8748be7e0b1\""
    ]
   },
   {
@@ -72,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +251,7 @@
        "1      9.6        6  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -285,6 +287,13 @@
     "(ingested_rows, failed_rows) = dataowner1_instance.submit_data(df)\n",
     "print(\"\\nNumber of successfully ingested rows: {}, number of failed rows: {}\".format(ingested_rows, failed_rows))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -315,7 +324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5rc1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
