--- a/examples/training-demo-data-owner-2-simple.ipynb
+++ b/examples/training-demo-data-owner-2-simple.ipynb
@@ -18,14 +18,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import example\n",
     "\n",
-    "dataowner2_username, dataowner2_***REMOVED*** = example.dataowner2_credentials\n",
-    "dataowner2_file = example.data_filenames[1]"
+    "dataowner2_username = os.getenv('DATAOWNER2_ID')\n",
+    "dataowner2_***REMOVED*** = os.getenv('DATAOWNER2_PASSWORD')\n",
+    "dataowner2_file = \"test-data/wine-dataowner2.csv\""
    ]
   },
   {
@@ -37,11 +39,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "instance_id_from_analyst = \"88880528-dc99-446e-b118-fb2975a6666d\""
+    "instance_id_from_analyst = \"e74d2ed9-a719-45f3-a237-20951eb54c85\""
    ]
   },
   {
@@ -53,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5rc1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
