--- a/examples/training-demo-data-owner-2.ipynb
+++ b/examples/training-demo-data-owner-2.ipynb
@@ -22,19 +22,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import pandas as pd\n",
     "from avato import Client\n",
     "from avato import Secret\n",
     "from avato_training import Training_Instance\n",
     "import example\n",
     "\n",
-    "dataowner2_username, dataowner2_***REMOVED*** = example.dataowner2_credentials\n",
+    "dataowner2_username = os.getenv('DATAOWNER2_ID')\n",
+    "dataowner2_***REMOVED*** = os.getenv('DATAOWNER2_PASSWORD')\n",
     "\n",
     "# This is the hash of the code\n",
     "expected_measurement = \"4ff505f350698c78e8b3b49b8e479146ce3896a06cd9e5109dfec8f393f14025\"\n",
     "\n",
     "# The datafile \n",
-    "_, dataowner2_file = example.data_filenames\n",
+    "dataowner2_file = \"test-data/wine-dataowner2.csv\"\n",
     "\n",
     "backend_host = \"localhost\" \n",
     "backend_port = 3000 "
@@ -152,7 +154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5rc1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
