Prep for production env, add explaination Instance ID in data-owner notebooks, small corrections

--- a/examples/training-demo-analyst.ipynb
+++ b/examples/training-demo-analyst.ipynb
@@ -33,22 +33,23 @@
     "import numpy as np\n",
     "import example\n",
     "\n",
-    "analyst_username, analyst_***REMOVED*** = example.analyst_credentials\n",
+    "analyst_username = os.getenv('ANALYST_ID')\n",
+    "analyst_***REMOVED*** = os.getenv('ANALYST_PASSWORD')\n",
     "\n",
     "# The analyst needs these to control who can upload data\n",
     "dataowner1_username = os.getenv('DATAOWNER1_ID')\n",
     "dataowner2_username = os.getenv('DATAOWNER2_ID')\n",
     "\n",
     "# This is the hash of the code\n",
-    "expected_measurement = \"4ff505f350698c78e8b3b49b8e479146ce3896a06cd9e5109dfec8f393f14025\"\n",
+    "expected_measurement = \"8e6c77bd904826526918a7e8fd4ccdc35cb8f8b5e0241fc78749e80dedf00cdf\"\n",
     "\n",
     "# How the analyst expects the data to be formatted\n",
     "feature_columns = ['fixed acidity', 'volatile acidity', 'citric acid', 'residual sugar', 'chlorides', 'free sulfur dioxide', 'total sulfur dioxide', 'density', 'pH', 'sulphates', 'alcohol']\n",
     "label_column = \"quality\"\n",
     "\n",
     "# This points to the confidential computing system\n",
-    "backend_host = \"localhost\" \n",
-    "backend_port = 3000"
+    "backend_host = \"avato.uksouth.cloudapp.azure.com\" \n",
+    "backend_port = 15005"
    ]
   },
   {
