--- a/examples/training-demo-data-owner-1.ipynb
+++ b/examples/training-demo-data-owner-1.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,13 +33,13 @@
     "dataowner1_***REMOVED*** = os.getenv('DATAOWNER1_PASSWORD')\n",
     "\n",
     "# This is the hash of the code\n",
-    "expected_measurement = \"4ff505f350698c78e8b3b49b8e479146ce3896a06cd9e5109dfec8f393f14025\"\n",
+    "expected_measurement = \"8e6c77bd904826526918a7e8fd4ccdc35cb8f8b5e0241fc78749e80dedf00cdf\"\n",
     "\n",
-    "# The datafiles uploaded by the \n",
-    "dataowner1_file, _ = example.data_filenames\n",
+    "# The datafile\n",
+    "dataowner1_file = \"test-data/wine-dataowner1.csv\"\n",
     "\n",
-    "backend_host = \"localhost\" \n",
-    "backend_port = 3000 "
+    "backend_host = \"avato.uksouth.cloudapp.azure.com\" \n",
+    "backend_port = 15005 "
    ]
   },
   {
@@ -51,11 +51,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "instance_id_from_analyst = \"3fa57b0e-2914-4312-bacd-f8748be7e0b1\""
+    "# TO MODIFY in accordance to Instance ID created and provided \n",
+    "#   by the analyst (Analyst notebook, Section 2, Instance ID: [...])\n",
+    "instance_id_from_analyst = \"9a1deb5e51b73ec56977230c19827b960280857caaf794ea1cda03ff91063658\""
    ]
   },
   {
@@ -74,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,30 +127,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data format:\n",
-      "categoriesColumns: \"fixed acidity\"\n",
-      "categoriesColumns: \"volatile acidity\"\n",
-      "categoriesColumns: \"citric acid\"\n",
-      "categoriesColumns: \"residual sugar\"\n",
-      "categoriesColumns: \"chlorides\"\n",
-      "categoriesColumns: \"free sulfur dioxide\"\n",
-      "categoriesColumns: \"total sulfur dioxide\"\n",
-      "categoriesColumns: \"density\"\n",
-      "categoriesColumns: \"pH\"\n",
-      "categoriesColumns: \"sulphates\"\n",
-      "categoriesColumns: \"alcohol\"\n",
-      "valueColumn: \"quality\"\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get data format from the enclave\n",
     "data_format = dataowner1_instance.get_data_format()\n",
@@ -164,98 +145,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>fixed acidity</th>\n",
-       "      <th>volatile acidity</th>\n",
-       "      <th>citric acid</th>\n",
-       "      <th>residual sugar</th>\n",
-       "      <th>chlorides</th>\n",
-       "      <th>free sulfur dioxide</th>\n",
-       "      <th>total sulfur dioxide</th>\n",
-       "      <th>density</th>\n",
-       "      <th>pH</th>\n",
-       "      <th>sulphates</th>\n",
-       "      <th>alcohol</th>\n",
-       "      <th>quality</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>7.2</td>\n",
-       "      <td>0.23</td>\n",
-       "      <td>0.32</td>\n",
-       "      <td>8.5</td>\n",
-       "      <td>0.058</td>\n",
-       "      <td>47.0</td>\n",
-       "      <td>186.0</td>\n",
-       "      <td>0.9956</td>\n",
-       "      <td>3.19</td>\n",
-       "      <td>0.40</td>\n",
-       "      <td>9.9</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>6.2</td>\n",
-       "      <td>0.32</td>\n",
-       "      <td>0.16</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>0.045</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>136.0</td>\n",
-       "      <td>0.9949</td>\n",
-       "      <td>3.18</td>\n",
-       "      <td>0.47</td>\n",
-       "      <td>9.6</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   fixed acidity  volatile acidity  citric acid  residual sugar  chlorides  \\\n",
-       "0            7.2              0.23         0.32             8.5      0.058   \n",
-       "1            6.2              0.32         0.16             7.0      0.045   \n",
-       "\n",
-       "   free sulfur dioxide  total sulfur dioxide  density    pH  sulphates  \\\n",
-       "0                 47.0                 186.0   0.9956  3.19       0.40   \n",
-       "1                 30.0                 136.0   0.9949  3.18       0.47   \n",
-       "\n",
-       "   alcohol  quality  \n",
-       "0      9.9        6  \n",
-       "1      9.6        6  "
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load data\n",
     "df = pd.read_csv(dataowner1_file)\n",
@@ -271,36 +163,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Number of successfully ingested rows: 2483, number of failed rows: []\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "(ingested_rows, failed_rows) = dataowner1_instance.submit_data(df)\n",
     "print(\"\\nNumber of successfully ingested rows: {}, number of failed rows: {}\".format(ingested_rows, failed_rows))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
