--- a/examples/training-demo-data-owner-2.ipynb
+++ b/examples/training-demo-data-owner-2.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,13 +33,13 @@
     "dataowner2_***REMOVED*** = os.getenv('DATAOWNER2_PASSWORD')\n",
     "\n",
     "# This is the hash of the code\n",
-    "expected_measurement = \"4ff505f350698c78e8b3b49b8e479146ce3896a06cd9e5109dfec8f393f14025\"\n",
+    "expected_measurement = \"8e6c77bd904826526918a7e8fd4ccdc35cb8f8b5e0241fc78749e80dedf00cdf\"\n",
     "\n",
-    "# The datafile \n",
+    "# The datafile\n",
     "dataowner2_file = \"test-data/wine-dataowner2.csv\"\n",
     "\n",
-    "backend_host = \"localhost\" \n",
-    "backend_port = 3000 "
+    "backend_host = \"avato.uksouth.cloudapp.azure.com\" \n",
+    "backend_port = 15005 "
    ]
   },
   {
@@ -51,11 +51,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "instance_id_from_analyst = \"651a23f6-0233-41f3-b13a-fb216b1f11b8\""
+    "# TO MODIFY in accordance to Instance ID created and provided \n",
+    "#   by the analyst (Analyst notebook, Section 2, Instance ID: [...])\n",
+    "instance_id_from_analyst = \"9a1deb5e51b73ec56977230c19827b960280857caaf794ea1cda03ff91063658\""
    ]
   },
   {
@@ -69,60 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### All the steps shown for Data Owner 1 are now hidden behind one function call"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data format:\n",
-      "categoriesColumns: \"fixed acidity\"\n",
-      "categoriesColumns: \"volatile acidity\"\n",
-      "categoriesColumns: \"citric acid\"\n",
-      "categoriesColumns: \"residual sugar\"\n",
-      "categoriesColumns: \"chlorides\"\n",
-      "categoriesColumns: \"free sulfur dioxide\"\n",
-      "categoriesColumns: \"total sulfur dioxide\"\n",
-      "categoriesColumns: \"density\"\n",
-      "categoriesColumns: \"pH\"\n",
-      "categoriesColumns: \"sulphates\"\n",
-      "categoriesColumns: \"alcohol\"\n",
-      "valueColumn: \"quality\"\n",
-      "\n",
-      "Loaded data:\n",
-      "\n",
-      "   fixed acidity  volatile acidity  citric acid  residual sugar  chlorides  \\\n",
-      "0            7.0              0.27         0.36            20.7      0.045   \n",
-      "1            6.3              0.30         0.34             1.6      0.049   \n",
-      "\n",
-      "   free sulfur dioxide  total sulfur dioxide  density   pH  sulphates  \\\n",
-      "0                 45.0                 170.0    1.001  3.0       0.45   \n",
-      "1                 14.0                 132.0    0.994  3.3       0.49   \n",
-      "\n",
-      "   alcohol  quality  \n",
-      "0      8.8        6  \n",
-      "1      9.5        6  \n",
-      "\n",
-      "Number of successfully ingested rows: 2415, number of failed rows: []\n"
-     ]
-    }
-   ],
-   "source": [
-    "dataowner2_instance = example.dataowner_submit_data(\n",
-    "    dataowner2_username, \n",
-    "    dataowner2_***REMOVED***, \n",
-    "    instance_id_from_analyst, \n",
-    "    data_file=dataowner2_file,\n",
-    "    backend_host=backend_host, \n",
-    "    backend_port=backend_port, \n",
-    "    expected_measurement=expected_measurement\n",
-    ")"
+    "#### Create client and connect to the instance created by the analyst"
    ]
   },
   {
@@ -130,7 +79,97 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create client\n",
+    "dataowner2_client = Client(\n",
+    "    username=dataowner2_username,\n",
+    "    ***REMOVED***=dataowner2_***REMOVED***,\n",
+    "    instance_types=[Training_Instance],\n",
+    "    backend_host=backend_host,\n",
+    "    backend_port=backend_port\n",
+    ")\n",
+    "\n",
+    "# Connect to instance (using ID from the analyst user)\n",
+    "dataowner2_instance = dataowner2_client.get_instance(instance_id_from_analyst)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Verify security and create own keypair"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Verify security.\n",
+    "dataowner2_instance.validate_fatquote(\n",
+    "    expected_measurement=expected_measurement,\n",
+    "    accept_debug=True,\n",
+    "    accept_group_out_of_date=True\n",
+    ")\n",
+    "\n",
+    "# Create and set public-private keypair for secure communication.\n",
+    "dataowner2_secret = Secret()\n",
+    "dataowner2_instance.set_secret(dataowner2_secret)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Get data format from the enclave"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get data format from the enclave\n",
+    "data_format = dataowner2_instance.get_data_format()\n",
+    "print(\"Data format:\\n{}\".format(data_format))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Load data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load data\n",
+    "df = pd.read_csv(dataowner2_file)\n",
+    "df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Submit data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(ingested_rows, failed_rows) = dataowner2_instance.submit_data(df)\n",
+    "print(\"\\nNumber of successfully ingested rows: {}, number of failed rows: {}\".format(ingested_rows, failed_rows))"
+   ]
   }
  ],
  "metadata": {
